src/objects/Preference_Type__c.object
<CustomObject>
    <fields>
        <fullName>Default_Response__c</fullName>
        <label>Default Response</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Effective_Date__c</fullName>
        <label>Display Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Expiration_Date__c</fullName>
        <label>Display Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Words__c</fullName>
        <label>Key Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Implications_Flag__c</fullName>
        <label>Legal Implications Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Length__c</fullName>
        <label>Max Length</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preference_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preference Category</label>
        <referenceTo>Preference_Category__c</referenceTo>
        <relationshipLabel>Preference Types</relationshipLabel>
        <relationshipName>Preference_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preference_Id__c</fullName>
        <label>Preference Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Preference Types</relationshipLabel>
        <relationshipName>Preference_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Code__c</fullName>
        <label>Quality Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Validation_Instructions__c</fullName>
        <label>Validation Instructions</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Preference Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preference Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>